Use CPack to build source and Debian package
Co-authored-by: Lucino772 <lucapalmi772@gmail.com>

--- a/devLib/CMakeLists.txt
+++ b/devLib/CMakeLists.txt
@@ -31,7 +31,7 @@ target_include_directories(wiringPiDev PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(wiringPiDev PRIVATE wiringPi)
 
 # Set the library version
-set_target_properties(wiringPiDev PROPERTIES VERSION ${WIRINGPI_VERSION} SOVERSION ${WIRINGPI_SOVERSION})
+set_target_properties(wiringPiDev PROPERTIES VERSION ${WIRINGPI_VERSION} SOVERSION ${WIRINGPI_VERSION_MAJOR})
 
 # Install headers
 install(FILES ${HEADERS} DESTINATION include)
