--- a/wiringPi/CMakeLists.txt
+++ b/wiringPi/CMakeLists.txt
@@ -49,7 +49,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wformat=2 -Winline -pipe -Wfo
 add_library(wiringPi SHARED ${SRC})
 
 # Set the library version
-set_target_properties(wiringPi PROPERTIES VERSION ${WIRINGPI_VERSION} SOVERSION ${WIRINGPI_SOVERSION})
+set_target_properties(wiringPi PROPERTIES VERSION ${WIRINGPI_VERSION} SOVERSION ${WIRINGPI_VERSION_MAJOR})
 target_include_directories(wiringPi PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add -lm to link with the math library
