#279 root.root -> root:root

--- a/wiringPiD/Makefile
+++ b/wiringPiD/Makefile
@@ -3,7 +3,7 @@
 #	The wiringPiD utility:
 #	https://github.com/wiringPi/wiringPi
 #
-#	Copyright (c) 2012-2017 Gordon Henderson
+#	Copyright (c) 2012-2024 Gordon Henderson and contributors
 #################################################################################
 # This file is part of wiringPi:
 #	A "wiring" library for the Raspberry Pi
@@ -70,7 +70,7 @@ install: wiringpid
 	$Q echo "[Install]"
 	$Q mkdir -p		$(DESTDIR)$(PREFIX)/sbin
 	$Q cp wiringpid		$(DESTDIR)$(PREFIX)/sbin
-	$Q chown root.root	$(DESTDIR)$(PREFIX)/sbin/wiringpid
+	$Q chown root:root	$(DESTDIR)$(PREFIX)/sbin/wiringpid
 
 #	$Q mkdir -p		$(DESTDIR)$(PREFIX)/man/man8
 #	$Q cp gpio.1		$(DESTDIR)$(PREFIX)/man/man8
