--- a/gpio/Makefile
+++ b/gpio/Makefile
@@ -4,7 +4,7 @@
 #	  A swiss-army knige of GPIO shenanigans.
 #	https://github.com/wiringPi/wiringPi
 #
-#	Copyright (c) 2012-2016 Gordon Henderson
+#	Copyright (c) 2012-2024 Gordon Henderson and contributors
 #################################################################################
 # This file is part of wiringPi:
 #	A "wiring" library for the Raspberry Pi
@@ -75,7 +75,7 @@ install: gpio
 	$Q mkdir -p		$(DESTDIR)$(PREFIX)/bin
 	$Q cp gpio		$(DESTDIR)$(PREFIX)/bin
 ifneq ($(WIRINGPI_SUID),0)
-	$Q chown root.root	$(DESTDIR)$(PREFIX)/bin/gpio
+	$Q chown root:root	$(DESTDIR)$(PREFIX)/bin/gpio
 	$Q chmod 4755		$(DESTDIR)$(PREFIX)/bin/gpio
 endif
 	$Q mkdir -p		$(DESTDIR)$(PREFIX)/share/man/man1
