--- a/devLib/CMakeLists.txt
+++ b/devLib/CMakeLists.txt
@@ -1,6 +1,4 @@
 # CMakeLists.txt for devLib
-
-cmake_minimum_required(VERSION 3.10)
 project(devLib)
 
 # Source files
@@ -34,6 +32,6 @@ target_link_libraries(wiringPiDev PRIVATE wiringPi)
 set_target_properties(wiringPiDev PROPERTIES VERSION ${WIRINGPI_VERSION} SOVERSION ${WIRINGPI_VERSION_MAJOR})
 
 # Install headers
-install(FILES ${HEADERS} DESTINATION include)
+install(FILES ${HEADERS} DESTINATION include COMPONENT Development)
 # Install the library
-install(TARGETS wiringPiDev LIBRARY DESTINATION lib)
+install(TARGETS wiringPiDev LIBRARY DESTINATION lib COMPONENT Runtime NAMELINK_COMPONENT Development)
